[gd_scene load_steps=3 format=3 uid="uid://cxwgh6hub1rk5"]

[ext_resource type="Script" uid="uid://ca0x3orb4t2bj" path="res://_common/default_tooltip_content.gd" id="1_content"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.08, 0.92)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[node name="DefaultTooltipContent" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_content")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
autowrap_mode = 3
